src/styles.css
@font-face {
  font-family: "Rubik";
  font-weight: 300;
  src: local("Rubik-Light"), url("/src/assets/fonts/rubik-v28-latin-300.woff2");
}

@font-face {
  font-family: "Rubik";
  font-weight: 400;
  src: local("Rubik-Regular"),
    url("/src/assets/fonts/rubik-v28-latin-regular.woff2");
}

@font-face {
  font-family: "Rubik";
  font-weight: 500;
  src: local("Rubik-Medium"), url("/src/assets/fonts/rubik-v28-latin-500.woff2");
}

/* ------------------- CSS Reset ------------------- */
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  list-style: none;
  -webkit-tap-highlight-color: transparent;
}

*:focus-visible {
  outline: 0.125rem dotted green;
  outline-offset: 0.125rem;
}

img,
svg,
picture {
  display: block;
  width: 100%;
  height: auto;
}

input,
button,
textarea {
  font: inherit;
  color: inherit;
}

a {
  text-decoration: none;
  color: inherit;
}

button {
  cursor: pointer;
  background-color: transparent;
  border: none;
}

/* ------------------- Design Tokens ------------------- */
:root {
  --ff-rubik: "Rubik", sans-serif;

  --clr-white: hsl(0, 0%, 100%);

  --clr-purple: hsl(246, 80%, 60%);
  --clr-purple-light: hsl(236, 100%, 87%);
  --clr-purple-dark: hsl(235, 46%, 20%);
  --clr-purple-hover: hsl(235, 46%, 28%);

  --clr-orange: hsl(15, 100%, 70%);
  --clr-aqua: hsl(195, 74%, 62%);
  --clr-red: hsl(348, 100%, 68%);
  --clr-green: hsl(145, 58%, 55%);
  --clr-violet: hsl(264, 64%, 52%);
  --clr-yellow: hsl(43, 83%, 65%);
  --clr-blue-dark: hsl(226, 43%, 10%);
}

/* ------------------- Utility Classes ------------------- */
.text-preset-1 {
  font-size: 0.9375rem;
  font-weight: 400;
  line-height: 1.2;
  letter-spacing: 0px;
}

.text-preset-2 {
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.2;
  letter-spacing: 0px;
}

.text-preset-3 {
  font-size: 1.125rem;
  font-weight: 500;
  line-height: 1.2;
  letter-spacing: 0px;
}

.text-preset-4 {
  font-size: 1.5rem;
  font-weight: 300;
  line-height: 1.2;
  letter-spacing: 0px;
}

.text-preset-5 {
  font-size: 2rem;
  font-weight: 300;
  line-height: 1.2;
  letter-spacing: 0px;
}

@media (min-width: 70rem) {
  .text-preset-4 {
    font-size: 2.5rem;
  }

  .text-preset-5 {
    font-size: 3.5rem;
    line-height: 1;
  }
}
/* ------------------- End of Utility Classes ------------------- */

body {
  min-height: 100dvh;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  font-family: "Rubik", sans-serif;
  color: var(--clr-white);
  background-color: var(--clr-blue-dark);
  padding: 5rem 1.5rem;
}

.main {
  width: 100%;
  max-width: 24rem;
}

.wrapper-grid {
  display: grid;
  gap: 1.5rem;
}

.info-tabs-wrapper {
  width: 100%;
  max-width: 24rem;
  justify-self: center;
  border-radius: 1rem;
  background-color: var(--clr-purple-dark);
}

.img-name-wrapper {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 1.25rem;
  border-radius: 1rem;
  background-color: var(--clr-purple);
  padding: 2rem;
}

.user-avatar {
  width: 4rem;
  height: 4rem;
  border-radius: 9999px;
  border: 3px solid var(--clr-white);
}

.user-name {
  display: grid;
  gap: 0.25rem;
  color: var(--clr-white);
}

.tab-list {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 1.5rem 1rem;
}

.tab-button {
  color: var(--clr-purple-light);
  outline-color: var(--clr-white);
  padding: 0.5rem 0.75rem;
  border-radius: 1rem;
}

@media (hover: hover) {
  .tab-button:hover {
    color: var(--clr-white);
  }
}

.tab-button[aria-selected="true"] {
  color: var(--clr-white);
  background-color: var(--clr-purple-hover);
}

.card-container {
  display: grid;
  gap: 1.5rem;
}

.card {
  border-radius: 1rem;
  padding-top: 3rem;
  background-size: 3rem 3rem;
  background-position: right 10% top 0%;
  background-repeat: no-repeat;
}

.card--work {
  background-color: var(--clr-orange);
  background-image: url("/assets/images/icon-work.svg");
}

.card--play {
  background-color: var(--clr-aqua);
  background-image: url("/assets/images/icon-play.svg");
}

.card--study {
  background-color: var(--clr-red);
  background-image: url("/assets/images/icon-study.svg");
}

.card--exercise {
  background-color: var(--clr-green);
  background-image: url("/assets/images/icon-exercise.svg");
}

.card--social {
  background-color: var(--clr-violet);
  background-image: url("/assets/images/icon-social.svg");
}

.card--self-care {
  background-color: var(--clr-yellow);
  background-image: url("/assets/images/icon-self-care.svg");
}

.card-content {
  display: grid;
  gap: 1.5rem;
  border-radius: 1rem;
  padding: 2rem;
  background-color: var(--clr-purple-dark);
  transform-origin: bottom;
  position: relative;
  cursor: pointer;
}

.card-content:focus-within {
  outline: 0.125rem dotted var(--clr-white);
}

@media (hover: hover) {
  .card-content:hover {
    background-color: var(--clr-purple-hover);
  }
}

.card-name-button-wrapper {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.card-title-link {
  outline: none;
}

.options-button {
  outline-color: var(--clr-white);
  position: relative;
  z-index: 2;
}

.options-button-icon {
  width: 1.5rem;
  height: 0.5rem;
  fill: var(--clr-purple-light);
}

.options-button:hover .options-button-icon {
  fill: var(--clr-white);
}

.card-hours-wrapper {
  display: flex;
  justify-content: space-between;
  align-items: center;
  gap: 1rem;
}

.card-last-hours {
  color: var(--clr-purple-light);
}

@media (min-width: 24rem) {
  .tab-list {
    padding: 2rem;
  }

  .tab-button {
    padding: 0.5rem 1rem;
  }
}

@media (min-width: 48rem) {
  .main {
    max-width: 50rem;
  }

  .card-container {
    grid-template-columns: repeat(2, minmax(0, 1fr));
  }
}

@media (min-width: 70rem) {
  .main {
    max-width: 68rem;
  }

  .wrapper-grid {
    grid-template-columns: auto 1fr;
    align-items: center;
  }

  .info-tabs-wrapper {
    max-width: 16rem;
  }

  .img-name-wrapper {
    flex-direction: column;
    align-items: flex-start;
    gap: 2.5rem;
  }

  .user-avatar {
    width: 5rem;
    height: 5rem;
    flex-direction: column;
    align-items: flex-start;
    gap: 2.5rem;
  }

  .tab-list {
    flex-direction: column;
    align-items: start;
    gap: 1.25rem;
  }

  .card-container {
    grid-template-columns: repeat(3, minmax(0, 1fr));
  }

  .card-hours-wrapper {
    flex-direction: column;
    align-items: flex-start;
  }
}

